--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "type": "module",
   "dependencies": {
-    "@u7/node-loader": "^0.0.49",
-    "@u7/read": "^0.0.6",
-    "@u7/yml": "^0.0.5",
-    "@u7/uridir": "^0.0.2",
+    "@w5/loader": "^0.0.1",
+    "@w5/read": "^0.0.1",
+    "@w5/yml": "^0.0.1",
+    "@w5/uridir": "^0.0.1",
     "zx": "^7.2.1"
   }
 }
